syntax = "proto3";
package proto;

message Player {
  int32 player_id = 1;
  string first_name = 2;
  string last_name = 3;
  string nick_name = 4;
  string email = 5;
  string phone = 6;
  double mu = 7;
  double sigma = 8;
//  repeated Match matches = 9;
  bool wait_list = 10;
  bool active = 11;
}

message Match {
  string p1_name= 1;
  string p2_name = 2;
  double p1_needs = 4;
  double p2_needs = 5;
  double p1_got = 6;
  double p2_got = 7;
  double p1_skill = 8;
  double p2_skill = 9;
  string date = 10;
  Type match_type = 11;
  Forfeit forfeit = 12;
  Offset offset = 13;

  enum Type {
    SEASON = 0;
    PLAYOFFS = 1;
  }
  enum Offset {
    MAKEUP = 0;
    PLAYAHEAD = 1;
  }
  enum Forfeit {
    PLAYER1 = 0;
    PLAYER2 = 1;
  }
}

message Season {
  string start_date = 1;
  string end_date = 2;
  string time_spec = 3;
  repeated Match matches = 4; 
}

message Roster {
  repeated Player players= 1;
}
